render-wasm/src/render/svg/snapshots/render_wasm__render__svg__tests__exports_rotated_rect_with_solid_outer_stroke.snap
---
source: src/render/svg/tests.rs
assertion_line: 367
expression: svg
---
<?xml version="1.0" encoding="utf-8" ?>
<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="204.02817" height="189.38715" viewBox="0 0 204.02817 189.38715">
	<rect fill="#FFD400" transform="matrix(0.866025 0.5 -0.5 0.866025 66.3923 16.3923)" width="140" height="100"/>
	<path fill="#1040FF" transform="matrix(0.866025 0.5 -0.5 0.866025 66.3923 16.3923)" d="M-12 -12L152 -12L152 112L-12 112L-12 -12ZM140 0L0 0L0 100L140 100L140 0Z" fill-rule="evenodd"/>
</svg>
