render-wasm/src/render/svg/snapshots/render_wasm__render__svg__tests__exports_rounded_rect_with_per_side_dashed_outer_stroke.snap
---
source: src/render/svg/tests.rs
expression: with_stable_clip_ids(&svg)
---
<?xml version="1.0" encoding="utf-8" ?>
<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="288" height="228" viewBox="0 0 288 228">
	<clipPath id="clip0">
		<path d="M0 180L0 48Q0 47.263542 0.057818096 46.527969Q0.11563619 45.7924 0.2311331 45.059486Q0.34663001 44.326576 0.51952744 43.598087Q0.69242489 42.869598 0.92230642 42.147289Q1.1521879 41.42498 1.4384997 40.710594Q1.7248116 39.996208 2.0668638 39.291462Q2.408916 38.586712 2.8058846 37.893303Q3.2028532 37.19989 3.6537821 36.519493Q4.1047111 35.839096 4.6085138 35.173347Q5.1123166 34.507595 5.6677794 33.858097Q6.2232423 33.208599 6.8290272 32.576916Q7.4348116 31.945234 8.0894585 31.332891Q8.7441063 30.720549 9.4460382 30.129021Q10.147971 29.537491 10.895498 28.968201Q11.643025 28.398911 12.434345 27.85323Q13.225666 27.307549 14.058874 26.786795Q14.892082 26.266039 15.765169 25.771461Q16.638256 25.276888 17.549122 24.809685Q18.459984 24.34248 19.406431 23.90377Q20.352879 23.465061 21.332626 23.055908Q22.312376 22.646753 23.323067 22.268139Q24.333759 21.889523 25.372959 21.54236Q26.412155 21.195196 27.477356 20.880318Q28.542557 20.565441 29.631193 20.283611Q30.719831 20.001781 31.829285 19.753675Q32.938736 19.505571 34.066334 19.29179Q35.193928 19.078007 36.336948 18.899063Q37.479969 18.720118 38.635662 18.576441Q39.791351 18.432766 40.956932 18.324705Q42.122513 18.216644 43.295174 18.144459Q44.467834 18.072273 45.644745 18.036137Q46.821663 18 48 18L240 18Q240.88376 18 241.76643 18.036137Q242.64912 18.072273 243.52863 18.144459Q244.40811 18.216644 245.28229 18.324703Q246.15646 18.432766 247.02324 18.576441Q247.89001 18.720118 248.74728 18.899063Q249.60455 19.078007 250.45026 19.29179Q251.29593 19.505571 252.12802 19.753677Q252.9601 20.001781 253.77658 20.283613Q254.59305 20.565443 255.39197 20.88032Q256.19086 21.195198 256.97028 21.542362Q257.74969 21.889526 258.50769 22.268143Q259.26572 22.646757 260.00052 23.055912Q260.73532 23.465065 261.44516 23.903772Q262.155 24.34248 262.83817 24.809687Q263.5213 25.27689 264.17612 25.771465Q264.83093 26.266041 265.45584 26.786797Q266.08075 27.307552 266.67422 27.853231Q267.26773 28.398911 267.82837 28.968201Q268.38904 29.537491 268.91547 30.129019Q269.44189 30.720547 269.93289 31.33289Q270.42389 31.945232 270.87823 32.576916Q271.33258 33.208599 271.74918 33.858097Q272.16577 34.507595 272.54361 35.173344Q272.92145 35.839096 273.25964 36.519493Q273.59784 37.19989 273.89557 37.893303Q274.1933 38.586708 274.44983 39.291458Q274.70636 39.996208 274.92111 40.710594Q275.13586 41.42498 275.30826 42.147289Q275.48065 42.869598 275.61035 43.598087Q275.74002 44.326576 275.82666 45.059486Q275.91327 45.7924 275.95663 46.527969Q276 47.263542 276 48L276 180Q276 181.03104 275.95663 182.06084Q275.91327 183.09064 275.82666 184.11673Q275.74002 185.14279 275.61035 186.16267Q275.48065 187.18254 275.30826 188.19377Q275.13586 189.205 274.92111 190.20514Q274.70639 191.20529 274.44986 192.19196Q274.1933 193.17859 273.89557 194.14935Q273.59784 195.12012 273.25964 196.07268Q272.92145 197.02524 272.54358 197.95731Q272.16574 198.88934 271.74915 199.79865Q271.33255 200.70795 270.8782 201.59229Q270.42389 202.47665 269.93289 203.33392Q269.44189 204.19119 268.91547 205.01935Q268.38904 205.8475 267.8284 206.64452Q267.26776 207.44151 266.67426 208.20546Q266.08075 208.96941 265.45584 209.69847Q264.83093 210.42752 264.17609 211.11993Q263.5213 211.81235 262.83813 212.46645Q262.15497 213.12053 261.44513 213.73471Q260.73529 214.34891 260.00049 214.92171Q259.26569 215.49454 258.50769 216.0246Q257.74966 216.55466 256.97028 217.0407Q256.19086 217.5267 255.39195 217.96753Q254.59305 218.40836 253.77658 218.80292Q252.9601 219.19748 252.12801 219.54483Q251.29593 219.89218 250.45023 220.1915Q249.60452 220.49078 248.74725 220.7413Q247.88998 220.99182 247.02322 221.19296Q246.15646 221.3941 245.28227 221.54539Q244.40811 221.69669 243.52863 221.79776Q242.64912 221.8988 241.76645 221.9494Q240.88376 222 240 222L48 222Q46.821663 222 45.644745 221.9494Q44.467834 221.8988 43.295174 221.79776Q42.122513 221.69669 40.956932 221.54539Q39.791351 221.3941 38.635658 221.19296Q37.479965 220.99182 36.336945 220.7413Q35.193928 220.49078 34.066334 220.1915Q32.938736 219.8922 31.829285 219.54486Q30.719831 219.19749 29.631193 218.80293Q28.542557 218.40836 27.477354 217.96753Q26.412153 217.5267 25.372955 217.0407Q24.333757 216.55466 23.323067 216.0246Q22.312376 215.49454 21.332626 214.92172Q20.352879 214.34891 19.406431 213.73473Q18.459984 213.12054 17.549122 212.46645Q16.638256 211.81235 15.765169 211.11993Q14.892082 210.42752 14.058874 209.69847Q13.225666 208.96941 12.434346 208.20546Q11.643025 207.4415 10.895498 206.6445Q10.14797 205.84749 9.4460382 205.01935Q8.7441044 204.19119 8.0894575 203.33392Q7.4348106 202.47665 6.8290257 201.59229Q6.2232418 200.70795 5.667779 199.79865Q5.1123161 198.88934 4.6085138 197.95728Q4.1047111 197.02524 3.6537821 196.07268Q3.2028532 195.12012 2.8058848 194.14935Q2.408916 193.17859 2.0668638 192.19196Q1.7248116 191.20529 1.4384997 190.20515Q1.1521879 189.20502 0.92230642 188.19379Q0.69242489 187.18256 0.51952749 186.16266Q0.34663001 185.14279 0.2311331 184.11673Q0.11563619 183.09064 0.057818096 182.06084Q0 181.03104 0 180ZM24 180L24 48Q24 47.410831 24.028908 46.822376Q24.057817 46.233917 24.115566 45.647591Q24.173313 45.061256 24.259762 44.478466Q24.34621 43.895676 24.461151 43.317829Q24.576092 42.739983 24.719248 42.168472Q24.862404 41.596962 25.03343 41.033165Q25.204456 40.469368 25.402941 39.914642Q25.601425 39.359917 25.826889 38.815594Q26.052353 38.271278 26.304255 37.738678Q26.556156 37.206078 26.833887 36.686481Q27.111618 36.166878 27.414509 35.661533Q27.717402 35.156189 28.044725 34.666313Q28.372049 34.176437 28.723017 33.703217Q29.073984 33.229992 29.447748 32.774563Q29.821512 32.31913 30.217173 31.882586Q30.612831 31.446041 31.029436 31.029438Q31.446039 30.612833 31.882584 30.217175Q32.31913 29.821514 32.774563 29.44775Q33.229992 29.073986 33.703217 28.723019Q34.176437 28.372051 34.666313 28.044727Q35.156189 27.717403 35.661533 27.414511Q36.166878 27.111618 36.686478 26.833887Q37.206078 26.556156 37.738678 26.304255Q38.271278 26.052353 38.815594 25.826889Q39.359917 25.601425 39.914642 25.402941Q40.469368 25.204456 41.033165 25.033432Q41.596962 24.862404 42.168472 24.719248Q42.739983 24.576092 43.317829 24.461153Q43.895676 24.346212 44.478466 24.259764Q45.061256 24.173315 45.647591 24.115566Q46.233917 24.057817 46.822372 24.028908Q47.410831 24 48 24L240 24Q240.58916 24 241.17763 24.028908Q241.76608 24.057817 242.35242 24.115566Q242.93872 24.173315 243.52151 24.259764Q244.10428 24.346212 244.68213 24.461153Q245.25998 24.576092 245.83148 24.719248Q246.40298 24.862404 246.9668 25.033432Q247.53058 25.204456 248.08531 25.402941Q248.64005 25.601425 249.18436 25.826889Q249.72867 26.052353 250.26129 26.304255Q250.79388 26.556156 251.31349 26.833887Q251.83307 27.111618 252.33841 27.414509Q252.84375 27.717402 253.33363 28.044725Q253.82352 28.372049 254.29674 28.723017Q254.76996 29.073984 255.2254 29.447748Q255.68082 29.821512 256.11737 30.217173Q256.55389 30.612831 256.97052 31.029436Q257.38715 31.446039 257.78278 31.882584Q258.17847 32.31913 258.55222 32.774563Q258.92596 33.229992 259.27692 33.703217Q259.6279 34.176437 259.95523 34.666313Q260.28253 35.156189 260.58545 35.661533Q260.88834 36.166878 261.16608 36.686478Q261.44382 37.206078 261.69571 37.738678Q261.94763 38.271278 262.1731 38.815594Q262.39856 39.359917 262.59705 39.914642Q262.79556 40.469368 262.96658 41.033165Q263.1376 41.596962 263.28076 42.168472Q263.42389 42.739983 263.53885 43.317829Q263.65378 43.895676 263.74023 44.478466Q263.82669 45.061256 263.88446 45.647591Q263.9422 46.233917 263.9711 46.822372Q264 47.410831 264 48L264 180Q264 180.58917 263.9711 181.17761Q263.9422 181.76608 263.88446 182.35242Q263.82669 182.93874 263.74023 183.52153Q263.65378 184.10431 263.53885 184.68216Q263.42389 185.26001 263.28073 185.83151Q263.13757 186.40303 262.96655 186.96683Q262.79553 187.53061 262.59705 188.08534Q262.39856 188.64006 262.1731 189.18439Q261.94763 189.7287 261.69574 190.26129Q261.44385 190.7939 261.16611 191.31351Q260.88837 191.8331 260.58545 192.33844Q260.28256 192.84378 259.95526 193.33366Q259.62793 193.82355 259.27695 194.29677Q258.92599 194.76999 258.55225 195.22543Q258.17847 195.68085 257.78281 196.1174Q257.38715 196.55394 256.97055 196.97055Q256.55396 197.38715 256.11743 197.78281Q255.68088 198.17847 255.22543 198.55225Q254.76999 198.92599 254.29677 199.27696Q253.82355 199.62793 253.33365 199.95525Q252.84378 200.28256 252.33844 200.58548Q251.8331 200.88837 251.31351 201.16611Q250.7939 201.44382 250.26129 201.69572Q249.7287 201.94763 249.18437 202.1731Q248.64005 202.39856 248.08534 202.59705Q247.53061 202.79553 246.96683 202.96655Q246.40302 203.13757 245.8315 203.28073Q245.25998 203.42387 244.68214 203.53882Q244.10431 203.65376 243.52151 203.74023Q242.93872 203.82669 242.3524 203.88445Q241.76607 203.94218 241.17761 203.97108Q240.58916 204 240 204L48 204Q47.410831 204 46.822376 203.9711Q46.233917 203.94218 45.647591 203.88445Q45.061256 203.82669 44.478466 203.74023Q43.895676 203.65378 43.317829 203.53883Q42.739983 203.42389 42.168472 203.28073Q41.596962 203.13757 41.033165 202.96655Q40.469368 202.79553 39.914642 202.59705Q39.359917 202.39856 38.815594 202.1731Q38.271278 201.94763 37.738678 201.69574Q37.206078 201.44383 36.686481 201.16611Q36.166878 200.88837 35.661533 200.58548Q35.156189 200.28259 34.666313 199.95526Q34.176437 199.62793 33.703217 199.27696Q33.229992 198.92599 32.774563 198.55225Q32.31913 198.1785 31.882586 197.78284Q31.446041 197.38718 31.029438 196.97057Q30.612833 196.55396 30.217175 196.11742Q29.821514 195.68088 29.44775 195.22545Q29.073986 194.77 28.723019 194.29678Q28.372051 193.82355 28.044727 193.33368Q27.717403 192.84381 27.414511 192.33847Q27.111618 191.83311 26.833887 191.31352Q26.556156 190.79391 26.304255 190.26131Q26.052353 189.7287 25.826889 189.18439Q25.601425 188.64006 25.402941 188.08533Q25.204456 187.53061 25.03343 186.96683Q24.862404 186.40303 24.719248 185.83151Q24.576092 185.26001 24.461151 184.68216Q24.34621 184.10431 24.259762 183.52151Q24.173313 182.93874 24.115566 182.35242Q24.057817 181.76608 24.028908 181.17761Q24 180.58917 24 180Z" clip-rule="evenodd"/>
	</clipPath>
	<g clip-path="url(#clip0)">
		<path fill="#1040FF" transform="translate(24 24)" d="M-24 -6L-7.7647057 -6L-7.7647057 0L-24 0M8.4705887 -6L24.705883 -6L24.705883 0L8.4705887 0M40.941177 -6L57.176468 -6L57.176468 0L40.941177 0M73.411766 -6L89.647064 -6L89.647064 0L73.411766 0M105.88235 -6L122.11765 -6L122.11765 0L105.88235 0M138.35294 -6L154.58824 -6L154.58824 0L138.35294 0M170.82353 -6L187.05882 -6L187.05882 0L170.82353 0M203.29413 -6L219.52942 -6L219.52942 0L203.29413 0M235.76471 -6L252 -6L252 0L235.76471 0M252 -6L252 16.666666L240 16.666666L240 -6M252 39.333332L252 62L240 62L240 39.333332M252 84.666664L252 107.33333L240 107.33333L240 84.666664M252 130L252 152.66666L240 152.66666L240 130M252 175.33333L252 198L240 198L240 175.33333M252 198L221.33333 198L221.33333 180L252 180M190.66667 198L160 198L160 180L190.66667 180M129.33334 198L98.666672 198L98.666672 180L129.33334 180M68 198L37.333344 198L37.333344 180L68 180M6.6666718 198L-24 198L-24 180L6.6666718 180M-24 198L-24 168.85715L0 168.85715L0 198M-24 139.71429L-24 110.57143L0 110.57143L0 139.71429M-24 81.428574L-24 52.285721L0 52.285721L0 81.428574M-24 23.142853L-24 -6L0 -6L0 23.142853M-24 -6L24 -6L24 24L-24 24L-24 -6ZM216 -6L252 -6L252 24L216 24L216 -6ZM216 156L252 156L252 198L216 198L216 156ZM-24 156L24 156L24 198L-24 198L-24 156Z"/>
	</g>
</svg>
