render-wasm/src/render/svg/snapshots/render_wasm__render__svg__tests__exports_text_background_blur_with_glyph_clip.snap
---
source: src/render/svg/tests.rs
expression: svg
---
<?xml version="1.0" encoding="utf-8" ?>
<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="200" height="80" viewBox="0 0 200 80"><defs><style type="text/css"><![CDATA[@font-face{font-family:"Source Sans Pro";font-style:normal;font-weight:400;src:url("fonts/sourcesanspro-regular.ttf") format("truetype");}]]></style></defs><foreignObject x="-16" y="-16" width="232" height="112"><div xmlns="http://www.w3.org/1999/xhtml" style="backdrop-filter:blur(5.118802px);-webkit-backdrop-filter:blur(5.118802px);clip-path:path(evenodd,'M18.070313 38.875C18.070313 36.765625 18.373047 34.871094 18.978516 33.191406C19.583984 31.511719 20.427084 30.085938 21.507813 28.914063C22.588541 27.742188 23.861328 26.84375 25.326172 26.21875C26.791016 25.59375 28.402344 25.28125 30.160156 25.28125C31.970053 25.28125 33.483723 25.619791 34.70117 26.296875C35.91862 26.973959 36.911457 27.716146 37.679688 28.523438L35.804688 30.632813C35.140625 29.942709 34.372395 29.363281 33.5 28.894531C32.627605 28.425781 31.527344 28.191406 30.199219 28.191406C28.871094 28.191406 27.673178 28.438803 26.605469 28.933594C25.53776 29.428385 24.629557 30.138021 23.88086 31.0625C23.132162 31.986979 22.552734 33.10026 22.142578 34.402344C21.732422 35.704426 21.527344 37.16927 21.527344 38.796875C21.527344 40.45052 21.7194 41.938152 22.103516 43.259766C22.48763 44.58138 23.047525 45.707684 23.783203 46.63867C24.51888 47.56966 25.427084 48.289063 26.507813 48.796875C27.588541 49.304688 28.832031 49.558594 30.238281 49.558594C31.175781 49.558594 32.064453 49.41862 32.904297 49.13867C33.74414 48.858723 34.43099 48.477863 34.964844 47.996094L34.964844 41.160156L29.398438 41.160156L29.398438 38.40625L37.992188 38.40625L37.992188 49.441406C37.132813 50.326824 36.00651 51.05599 34.61328 51.628906C33.22005 52.201824 31.644531 52.48828 29.886719 52.48828C28.154947 52.48828 26.566406 52.179035 25.121094 51.560547C23.675781 50.94206 22.435547 50.053387 21.40039 48.89453C20.365234 47.735676 19.551432 46.309895 18.958984 44.617188C18.366537 42.92448 18.070313 41.010418 18.070313 38.875ZM43.94922 48.07422L43.94922 23.523438L47.23047 23.523438L47.23047 48.328125C47.23047 48.86198 47.32487 49.233074 47.51367 49.441406C47.702473 49.64974 47.914063 49.753906 48.148438 49.753906C48.252605 49.753906 48.353516 49.753906 48.45117 49.753906C48.54883 49.753906 48.6888 49.727863 48.871094 49.67578L49.30078 52.15625C49.09245 52.260418 48.841797 52.341797 48.54883 52.40039C48.25586 52.458984 47.88151 52.48828 47.42578 52.48828C46.17578 52.48828 45.283855 52.113934 44.75 51.365234C44.216145 50.616535 43.94922 49.51953 43.94922 48.07422ZM53.1875 46.960938C53.1875 44.82552 54.141277 43.191406 56.04883 42.058594C57.95638 40.92578 60.98698 40.13151 65.140625 39.67578C65.140625 39.0638 65.08203 38.464844 64.96484 37.878906C64.84766 37.29297 64.63607 36.772137 64.33008 36.316406C64.024086 35.860676 63.617188 35.49284 63.109375 35.21289C62.601563 34.93294 61.94401 34.79297 61.13672 34.79297C59.990887 34.79297 58.93294 35.007813 57.96289 35.4375C56.99284 35.867188 56.117188 36.348957 55.335938 36.882813L54.027344 34.597656C54.9388 34.01172 56.045574 33.445313 57.347656 32.898438C58.64974 32.351563 60.088543 32.078125 61.664063 32.078125C64.03385 32.078125 65.7526 32.804035 66.82031 34.25586C67.88802 35.707684 68.421875 37.651043 68.421875 40.085938L68.421875 52L65.70703 52L65.41406 49.67578L65.33594 49.67578C64.39844 50.44401 63.39258 51.104816 62.31836 51.658203C61.24414 52.21159 60.108074 52.48828 58.910156 52.48828C57.25651 52.48828 55.889324 52.00651 54.808594 51.04297C53.727863 50.079426 53.1875 48.71875 53.1875 46.960938ZM56.429688 46.726563C56.429688 47.846355 56.755207 48.64388 57.40625 49.11914C58.057293 49.594402 58.864582 49.83203 59.828125 49.83203C60.765625 49.83203 61.651043 49.613934 62.484375 49.177734C63.317707 48.741535 64.203125 48.09375 65.140625 47.234375L65.140625 41.84375C63.51302 42.052082 62.139324 42.302734 61.01953 42.595703C59.89974 42.88867 59.0013 43.23698 58.32422 43.640625C57.647137 44.04427 57.16211 44.50651 56.86914 45.027344C56.57617 45.548176 56.429688 46.114582 56.429688 46.726563ZM72.44531 49.79297L74.08594 47.60547C74.94531 48.295574 75.82096 48.85547 76.71289 49.285156C77.60482 49.714844 78.63672 49.929688 79.80859 49.929688C81.08463 49.929688 82.04492 49.633465 82.68945 49.041016C83.333984 48.448566 83.65625 47.729168 83.65625 46.882813C83.65625 46.375 83.52279 45.935547 83.25586 45.564453C82.98893 45.19336 82.64713 44.86784 82.23047 44.58789C81.813805 44.30794 81.33854 44.060547 80.80469 43.845703C80.270836 43.63086 79.73698 43.41276 79.203125 43.191406C78.51302 42.95703 77.822914 42.686848 77.13281 42.38086C76.44271 42.07487 75.82422 41.70052 75.27734 41.257813C74.73047 40.815105 74.28125 40.30078 73.92969 39.714844C73.578125 39.128906 73.40234 38.42578 73.40234 37.60547C73.40234 36.83724 73.55859 36.11133 73.87109 35.427734C74.18359 34.74414 74.626305 34.15495 75.19922 33.660156C75.77213 33.165363 76.47201 32.777996 77.29883 32.498047C78.12565 32.218098 79.0599 32.078125 80.10156 32.078125C81.32552 32.078125 82.44857 32.29297 83.4707 32.722656C84.492836 33.152344 85.38151 33.673176 86.13672 34.285156L84.57422 36.35547C83.91016 35.847656 83.2168 35.434246 82.49414 35.115234C81.771484 34.796223 80.98698 34.63672 80.140625 34.63672C78.916664 34.63672 78.01498 34.916668 77.43555 35.476563C76.85612 36.036457 76.56641 36.69401 76.56641 37.44922C76.56641 37.90495 76.68685 38.29883 76.927734 38.63086C77.16862 38.96289 77.49088 39.252605 77.89453 39.5C78.29818 39.747395 78.757164 39.972004 79.271484 40.17383C79.785805 40.375652 80.322914 40.58724 80.88281 40.808594C81.572914 41.06901 82.27279 41.345703 82.98242 41.63867C83.692055 41.93164 84.32682 42.29948 84.88672 42.742188C85.44662 43.184895 85.90885 43.72526 86.27344 44.36328C86.63802 45.0013 86.82031 45.776043 86.82031 46.6875C86.82031 47.48177 86.66406 48.227215 86.35156 48.92383C86.03906 49.62044 85.583336 50.23242 84.984375 50.759766C84.385414 51.28711 83.63998 51.70703 82.74805 52.01953C81.85612 52.33203 80.83724 52.48828 79.69141 52.48828C78.311195 52.48828 76.992836 52.234375 75.73633 51.726563C74.47982 51.21875 73.38281 50.57422 72.44531 49.79297ZM89.203125 49.79297L90.84375 47.60547C91.703125 48.295574 92.57877 48.85547 93.4707 49.285156C94.36263 49.714844 95.39453 49.929688 96.56641 49.929688C97.842445 49.929688 98.802734 49.633465 99.447266 49.041016C100.0918 48.448566 100.41406 47.729168 100.41406 46.882813C100.41406 46.375 100.2806 45.935547 100.01367 45.564453C99.74674 45.19336 99.404945 44.86784 98.98828 44.58789C98.57162 44.30794 98.09635 44.060547 97.5625 43.845703C97.02865 43.63086 96.49479 43.41276 95.96094 43.191406C95.270836 42.95703 94.58073 42.686848 93.890625 42.38086C93.20052 42.07487 92.58203 41.70052 92.03516 41.257813C91.48828 40.815105 91.03906 40.30078 90.6875 39.714844C90.33594 39.128906 90.16016 38.42578 90.16016 37.60547C90.16016 36.83724 90.31641 36.11133 90.62891 35.427734C90.94141 34.74414 91.38412 34.15495 91.95703 33.660156C92.529945 33.165363 93.22982 32.777996 94.05664 32.498047C94.88346 32.218098 95.81771 32.078125 96.859375 32.078125C98.083336 32.078125 99.20638 32.29297 100.228516 32.722656C101.25065 33.152344 102.13932 33.673176 102.89453 34.285156L101.33203 36.35547C100.66797 35.847656 99.97461 35.434246 99.25195 35.115234C98.5293 34.796223 97.74479 34.63672 96.89844 34.63672C95.67448 34.63672 94.77279 34.916668 94.19336 35.476563C93.61393 36.036457 93.32422 36.69401 93.32422 37.44922C93.32422 37.90495 93.444664 38.29883 93.68555 38.63086C93.92643 38.96289 94.248695 39.252605 94.65234 39.5C95.05599 39.747395 95.51498 39.972004 96.0293 40.17383C96.54362 40.375652 97.08073 40.58724 97.640625 40.808594C98.33073 41.06901 99.0306 41.345703 99.740234 41.63867C100.44987 41.93164 101.08463 42.29948 101.64453 42.742188C102.20443 43.184895 102.666664 43.72526 103.03125 44.36328C103.395836 45.0013 103.578125 45.776043 103.578125 46.6875C103.578125 47.48177 103.421875 48.227215 103.109375 48.92383C102.796875 49.62044 102.34115 50.23242 101.74219 50.759766C101.14323 51.28711 100.39779 51.70703 99.50586 52.01953C98.61393 52.33203 97.595055 52.48828 96.44922 52.48828C95.06901 52.48828 93.75065 52.234375 92.49414 51.726563C91.23763 51.21875 90.140625 50.57422 89.203125 49.79297Z');height:100%;width:100%"></div></foreignObject>
	<text fill="white" fill-opacity="0.78431374" font-size="40" font-family="Source Sans Pro" x="0, 24.667969, 34.863281, 55.332031, 72.089844" y="36">
			Glass
	</text>
</svg>
