render-wasm/src/render/svg/snapshots/render_wasm__render__svg__tests__exports_text_with_solid_center_image_stroke.snap
---
source: src/render/svg/tests.rs
expression: svg
---
<?xml version="1.0" encoding="utf-8" ?>
<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="568" height="248" viewBox="0 0 568 248"><defs><style type="text/css"><![CDATA[@font-face{font-family:"Source Sans Pro";font-style:normal;font-weight:400;src:url("fonts/sourcesanspro-regular.ttf") format("truetype");}]]></style><mask id="txtstrokemask0" maskUnits="userSpaceOnUse">
	<rect transform="translate(4 4)" x="-100000" y="-100000" width="200000" height="200000"/>
	<defs/>
	<text fill="none" stroke="white" stroke-width="8" stroke-miterlimit="4" transform="translate(4 4)" font-size="200" font-family="Source Sans Pro" x="0, 130.37109, 263.08594, 360.83984" y="181">
			HOLA
	</text>
</mask></defs>
	<text fill="#E17FDA" transform="translate(4 4)" font-size="200" font-family="Source Sans Pro" x="0, 130.37109, 263.08594, 360.83984" y="181">
			HOLA
	</text>
<g mask="url(#txtstrokemask0)"><image href="images/test-fill.svg" x="0" y="-20" width="560" height="280" preserveAspectRatio="xMidYMid slice" transform="matrix(1 0 0 1 4 4)"/></g></svg>
