render-wasm/src/render/svg/snapshots/render_wasm__render__svg__tests__exports_text_with_solid_center_stroke.snap
---
source: src/render/svg/tests.rs
expression: svg
---
<?xml version="1.0" encoding="utf-8" ?>
<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="562" height="242" viewBox="0 0 562 242"><defs><style type="text/css"><![CDATA[@font-face{font-family:"Source Sans Pro";font-style:normal;font-weight:400;src:url("fonts/sourcesanspro-regular.ttf") format("truetype");}]]></style></defs>
	<text fill="#E17FDA" transform="translate(1 1)" font-size="200" font-family="Source Sans Pro" x="0, 130.37109, 263.08594, 360.83984" y="181">
			HOLA
	</text>
	<defs/>
	<text fill="none" stroke="blue" stroke-width="2" stroke-miterlimit="4" transform="translate(1 1)" font-size="200" font-family="Source Sans Pro" x="0, 130.37109, 263.08594, 360.83984" y="181">
			HOLA
	</text>
</svg>
